buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        jcenter()
        mavenCentral()
        maven { name="sponge"; url 'https://repo.spongepowered.org/repository/maven-public/' }
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '[6.0,6.2)', changing: true
        // classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}

plugins {
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '5.1.+'
}
// apply plugin: 'org.spongepowered.mixin'

version = '40.1.0.0'
group = 'com.Hileb.add_potion'
archivesBaseName = 'add_potion'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
minecraft {
    mappings channel: 'official', version: '1.18.2'

    // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run/client')

            property 'forge.logging.markers', 'REGISTRIES'
            // property 'mixin.env.remapRefMap', 'true'
            // property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

            property 'forge.logging.console.level', 'debug'

            property 'forge.enabledGameTestNamespaces', 'add_potion'
            // arg "-mixin.config=add_potion.mixins.json"

            mods {
                add_potion {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run/server')

            property 'forge.logging.markers', 'REGISTRIES'
            // property 'mixin.env.remapRefMap', 'true'
            // property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

            property 'forge.logging.console.level', 'debug'

            property 'forge.enabledGameTestNamespaces', 'add_potion'
            // arg "-mixin.config=add_potion.mixins.json"

            mods {
                add_potion {
                    source sourceSets.main
                }
            }
        }

        gameTestServer {
            workingDirectory project.file('run/testServer')

            property 'forge.logging.markers', 'REGISTRIES'
            // property 'mixin.env.remapRefMap', 'true'
            // property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

            property 'forge.logging.console.level', 'debug'

            property 'forge.enabledGameTestNamespaces', 'add_potion'
            // arg "-mixin.config=add_potion.mixins.json"

            mods {
                add_potion {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run/datagen')

            property 'forge.logging.markers', 'REGISTRIES'
            // property 'mixin.env.remapRefMap', 'true'
            // property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

            property 'forge.logging.console.level', 'debug'

            args '--mod', 'add_potion', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
            // arg "-mixin.config=add_potion.mixins.json"

            mods {
                add_potion {
                    source sourceSets.main
                }
            }
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven { // TOP
        name 'CurseMaven'
        url "https://cursemaven.com"
    }
    maven { // JEI
        name 'DVS1 Maven FS'
        url 'https://dvs1.progwml6.com/files/maven'
    }
    maven { //mirror
        name "ModMaven"
        url "https://modmaven.dev"
    }
    maven { //Botania
        name 'BlameJared'
        url 'https://maven.blamejared.com'
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.18.2-40.1.0'

    compileOnly fg.deobf("vazkii.botania:Botania:1.18.2-435:api")
    runtimeOnly fg.deobf("mezz.jei:jei-1.18.2:9.7.1.255")

    // annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

jar {
    manifest {
        attributes([
                "Specification-Title"     : "Add Potion into Your Food",
                "Specification-Vendor"    : "Hileb, Liu Dongyu",
                "Specification-Version"   : "1",
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : "Hileb, Liu Dongyu",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                'FMLCorePluginContainsFMLMod': 'true'
        ])
    }
}

jar.finalizedBy('reobfJar')

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

// mixin {
//     add sourceSets.main, 'add_potion.refmap.json'
//     config 'add_potion.mixins.json'
//
//     debug.verbose = true
//     debug.export = true
// }

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}